<resources>
    <string name="app_name">HeartAttApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="Home">Home</string>
    <string name="Planning">Planning</string>
    <string name="Measure">Measure</string>
    <string name="Graphs">Graphs</string>
    <string name="Profile">Profile</string>
    <string name="title_activity_text_bottom">text_bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_measurments">Measure</string>
    <string name="title_activity_planning">Planning</string>
    <string name="title_activity_graphs">Graphs</string>
    <string name="title_activity_profile">Profile Info</string>
    <string name="title_activity_charts">Charts</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_word">Word...</string>
    <string name="hint_systolic">Systolic Pressure</string>
    <string name="hint_diastolic">Diastolic Pressure</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
