<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Home"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_planning"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/Planning"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_measure"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/Measure"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_graphs"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/Graphs"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/Profile"
        app:showAsAction="always|withText" />

</menu>